--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -14,7 +14,7 @@
 <link
   rel="alternate"
   type="application/rss+xml"
-  title="{{ site.title }} - {{ site.description }}"
+  title="{{ site.title }}"
   href="{{ site.baseurl }}/feed.xml" />
 <link
   rel="stylesheet"
