--- a/docs/_sass/header.scss
+++ b/docs/_sass/header.scss
@@ -1,18 +1,21 @@
 @charset "utf-8";
 
-.header-info {
-  display: block;
+.header-name {
   position: relative;
   margin: 10px;
-}
-
-.header-info-name {
   font-size: 2em;
   font-weight: bold;
+  float: left;
 }
 
-.header-info-desc {
-  font-size: 0.9em;
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  float: right;
+  margin-left: auto;
 }
 
 .header-main-nav {
