--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -4,17 +4,20 @@
   </span>
   <nav class="header-nav">
     <ul class="header-main-nav">
-      {% for item in site.data.menus %}
       <li class="header-main-nav-item">
-        <a href="{% if item.absoluteUrl != true %}{{ site.baseurl }}/{% endif %}{{ item.url }}">
-          {% if item.default %}
-            {{site.data.lang[site.language][item.default]}}
-          {% else %}
-            {{ item.title }}
-          {% endif %}
-        </a>
+        {% assign current = page.url | downcase | split: '/' %}
+        {% for item in site.data.menus %}
+          <li class="header-main-nav-item">
+            <a href="{% if item.absoluteUrl != true %}{{ site.baseurl }}/{% endif %}{{ item.url }}">
+              {% if current[1] == item.url %}
+                <div class="header-active-nav-item"> {{ item.title }} </div>
+              {% else %}
+                {{ item.title }}
+              {% endif %}
+            </a>
+          </li>
+        {% endfor %}
       </li>
-      {% endfor %}
     </ul>
   </nav>
 </div>
