Add hyperlink to site name

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,8 @@
 <div class="header">
   <span class="header-name">
-    {{ site.title }}
+    <a href="{{ site.baseurl }}">
+      {{ site.title }}
+    </a>
   </span>
   <nav class="header-nav">
     <ul class="header-main-nav">
