Fix hyperlink url

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="header">
   <span class="header-name">
-    <a href="{{ site.baseurl }}">
+    <a href="{{ site.url }}">
       {{ site.title }}
     </a>
   </span>
